--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,27 @@
-<!DOCTYPE html><html><head>
-  <meta charset="utf-8">
-  <title>svelte-3-rollup-typescript-vscode</title>
-  <link rel="stylesheet" href="bundle.css">
-</head>
-<body>
-  <script type="text/javascript" src="bundle.js"></script>
-</body>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf8" />
+    <meta name="viewport" content="width=device-width" />
+
+    <title>Svelte app</title>
+
+    <!-- UIkit CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/uikit@3.3.2/dist/css/uikit.min.css"
+    />
+
+    <!-- UIkit JS -->
+    <script src="https://cdn.jsdelivr.net/npm/uikit@3.3.2/dist/js/uikit.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/uikit@3.3.2/dist/js/uikit-icons.min.js"></script>
+
+    <!-- BUNDLES -->
+    <link rel="stylesheet" href="global.css" />
+    <link rel="stylesheet" href="bundle.css" />
+  </head>
+
+  <body>
+    <script src="bundle.js"></script>
+  </body>
 </html>
