--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,12 @@
 <html>
   <head>
     <meta charset="utf8" />
-    <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title>Svelte app</title>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap" rel="stylesheet" />
-
+    <!-- BULMA Fonts -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css" />
+    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
     <!-- BUNDLES -->
     <link rel="stylesheet" href="bundle.css" />
   </head>
