--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="bundle.css" />
   </head>
 
-  <body>
+  <body class="has-navbar-fixed-top">
     <script src="bundle.js"></script>
   </body>
 </html>
