improved performance and SEO
Signed-off-by: lineville <lneville@quantumscape.com>

--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>PWA Template</title>
+
     <meta charset="utf8" />
+    <meta name="description" content="This is a page to show covid19 stats" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <title>Svelte app</title>
     <!-- BULMA Fonts -->
@@ -10,9 +14,10 @@
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
     <!-- BUNDLES -->
     <link rel="stylesheet" href="bundle.css" />
+    <link rel="icon" type="image/ico" href="favicon.ico" />
   </head>
 
   <body>
-    <script src="bundle.js"></script>
+    <script src="bundle.js" async></script>
   </body>
 </html>
