--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-    <!-- BULMA Fonts -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css" />
-
+    <!-- FONT AWESOME -->
     <script defer src="https://kit.fontawesome.com/5fc084429f.js" crossorigin="anonymous"></script>
-    <!-- <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script> -->
+
     <!-- BUNDLES -->
     <link rel="stylesheet" href="bundle.css" />
     <link rel="icon" type="image/ico" href="favicon.ico" />
