fixed page description

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <title>Svelte app</title>
 
     <meta charset="utf8" />
-    <meta name="description" content="This is a page to show covid19 stats" />
+    <meta name="description" content="Break Even -- Don's BlackJack" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
