fixed index title

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Svelte app</title>
+    <title>Break Even</title>
 
     <meta charset="utf8" />
     <meta name="description" content="Break Even -- Don's BlackJack" />
