--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Svelte app</title>
+    <base href="./" />
 
     <meta charset="utf8" />
     <meta name="description" content="This is a page to show covid19 stats" />
@@ -12,11 +13,11 @@
     <script defer src="https://kit.fontawesome.com/5fc084429f.js" crossorigin="anonymous"></script>
 
     <!-- BUNDLES -->
-    <link rel="stylesheet" href="bundle.css" />
-    <link rel="icon" type="image/ico" href="favicon.ico" />
+    <link rel="stylesheet" href="./bundle.css" />
+    <link rel="icon" type="image/ico" href="./favicon.ico" />
   </head>
 
   <body class="has-navbar-fixed-top">
-    <script src="bundle.js" async></script>
+    <script src="./bundle.js" async></script>
   </body>
 </html>
